--- a/docs/ml/1.机器学习基础.md
+++ b/docs/ml/1.机器学习基础.md
@@ -36,7 +36,6 @@
     * [深度学习 vs 机器学习 vs 模式识别](http://www.csdn.net/article/2015-03-24/2824301)
     * [深度学习 百科资料](http://baike.baidu.com/link?url=76P-uA4EBrC3G-I__P1tqeO7eoDS709Kp4wYuHxc7GNkz_xn0NxuAtEohbpey7LUa2zUQLJxvIKUx4bnrEfOmsWLKbDmvG1PCoRkJisMTQka6-QReTrIxdYY3v93f55q)
 
-
 > 机器学习已应用于多个领域，远远超出大多数人的想象，横跨：计算机科学、工程技术和统计学等多个学科。
 
 * 搜索引擎: 根据你的搜索点击，优化你下次的搜索结果,是机器学习来帮助搜索引擎判断哪个结果更适合你（也判断哪个广告更适合你）。
@@ -45,8 +44,6 @@
 * 邮局邮寄: 手写软件自动识别寄送贺卡的地址。
 * 申请贷款: 通过你最近的金融活动信息进行综合评定，决定你是否合格。
 
-
-## 机器学习 组成
 
 ### 主要任务
 
@@ -68,7 +65,7 @@
     * 功能的复杂性和数量的训练数据
     * 输入空间的维数
     * 噪声中的输出值
-* `知识表示`：
+* 知识表示：
     * 可以采用规则集的形式【例如：数学成绩大于90分为优秀】
     * 可以采用概率分布的形式【例如：通过统计分布发现，90%的同学数学成绩，在70分以下，那么大于70分定为优秀】
     * 可以使用训练样本集中的一个实例【例如：通过样本集合，我们训练出一个模型实例，得出 年轻，数学成绩中高等，谈吐优雅，我们认为是优秀】
@@ -82,8 +79,11 @@
   * 聚类：在无监督学习中，将数据集分成由类似的对象组成多个类的过程称为聚类。
   * 密度估计：通过样本分布的紧密程度，来估计与分组的相似性。
   * 此外，无监督学习还可以减少数据特征的维度，以便我们可以使用二维或三维图形更加直观地展示数据信息。
+
 ### 强化学习
+
 这个算法可以训练程序做出某一决定。程序在某一情况下尝试所有的可能行动，记录不同行动的结果并试着找出最好的一次尝试来做决定。 属于这一类算法的有马尔可夫决策过程。
+
 ### 训练过程
 
 ![机器学习训练过程图](http://data.apachecn.org/img/AiLearning/ml/1.MLFoundation/机器学习基础训练过程.jpg)
@@ -91,7 +91,6 @@
 ### 算法汇总
 
 ![算法汇总](http://data.apachecn.org/img/AiLearning/ml/1.MLFoundation/ml_algorithm.jpg)
-
 
 ## 机器学习 使用
 
@@ -108,7 +107,6 @@
 
 > 机器学习 开发流程
 
-
 1. 收集数据: 收集样本数据
 2. 准备数据: 注意数据的格式
 3. 分析数据: 为了确保数据集中没有垃圾数据；
@@ -119,12 +117,14 @@
 6. 使用算法: 将机器学习算法转为应用程序
 
 ## 机器学习 数学基础
+
 * 微积分
 * 统计学/概率论
 * 线性代数
+
 ## 机器学习 工具
 
-### Python语言 
+### Python语言
 
 1. 可执行伪代码
 2. Python比较流行：使用广泛、代码范例多、丰富模块库，开发周期短
@@ -134,9 +134,13 @@
     * 科学函数库：`SciPy`、`NumPy`(底层语言：C和Fortran)
     * 绘图工具库：`Matplotlib`
     * 数据分析库 `Pandas`
+
 ### 数学工具
+
 * Matlab
+
 ## 附：机器学习专业术语
+
 * 模型（model）：计算机层面的认知
 * 学习算法（learning algorithm），从数据中产生模型的方法
 * 数据集（data set）：一组记录的合集
@@ -181,22 +185,22 @@
 
 ### 数据集的划分
 
- * 训练集（Training set） —— 学习样本数据集，通过匹配一些参数来建立一个模型，主要用来训练模型。类比考研前做的解题大全。
- * 验证集（validation set） —— 对学习出来的模型，调整模型的参数，如在神经网络中选择隐藏单元数。验证集还用来确定网络结构或者控制模型复杂程度的参数。类比 考研之前做的模拟考试。
- * 测试集（Test set） —— 测试训练好的模型的分辨能力。类比 考研。这次真的是一考定终身。
+* 训练集（Training set） —— 学习样本数据集，通过匹配一些参数来建立一个模型，主要用来训练模型。类比考研前做的解题大全。
+* 验证集（validation set） —— 对学习出来的模型，调整模型的参数，如在神经网络中选择隐藏单元数。验证集还用来确定网络结构或者控制模型复杂程度的参数。类比 考研之前做的模拟考试。
+* 测试集（Test set） —— 测试训练好的模型的分辨能力。类比 考研。这次真的是一考定终身。
 
 ### 模型拟合程度
 
- * 欠拟合（Underfitting）：模型没有很好地捕捉到数据特征，不能够很好地拟合数据，对训练样本的一般性质尚未学好。类比，光看书不做题觉得自己什么都会了，上了考场才知道自己啥都不会。
- * 过拟合（Overfitting）：模型把训练样本学习“太好了”，可能把一些训练样本自身的特性当做了所有潜在样本都有的一般性质，导致泛化能力下降。类比，做课后题全都做对了，超纲题也都认为是考试必考题目，上了考场还是啥都不会。 
+* 欠拟合（Underfitting）：模型没有很好地捕捉到数据特征，不能够很好地拟合数据，对训练样本的一般性质尚未学好。类比，光看书不做题觉得自己什么都会了，上了考场才知道自己啥都不会。
+* 过拟合（Overfitting）：模型把训练样本学习“太好了”，可能把一些训练样本自身的特性当做了所有潜在样本都有的一般性质，导致泛化能力下降。类比，做课后题全都做对了，超纲题也都认为是考试必考题目，上了考场还是啥都不会。 
 
 通俗来说，欠拟合和过拟合都可以用一句话来说，欠拟合就是：“你太天真了！”，过拟合就是：“你想太多了！”。
 
 ### 常见的模型指标
 
- * 正确率 —— 提取出的正确信息条数 / 提取出的信息条数
- * 召回率 —— 提取出的正确信息条数 / 样本中的信息条数
- * F 值 —— 正确率 * 召回率 * 2 / （正确率 + 召回率）（F值即为正确率和召回率的调和平均值）
+* 正确率 —— 提取出的正确信息条数 / 提取出的信息条数
+* 召回率 —— 提取出的正确信息条数 / 样本中的信息条数
+* F 值 —— 正确率 * 召回率 * 2 / （正确率 + 召回率）（F值即为正确率和召回率的调和平均值）
 
 举个例子如下：
 
@@ -209,19 +213,19 @@ F 值 = 70% * 50% * 2 / (70% + 50%) = 58.3%
 
 ### 模型
 
- * 分类问题 —— 说白了就是将一些未知类别的数据分到现在已知的类别中去。比如，根据你的一些信息，判断你是高富帅，还是穷屌丝。评判分类效果好坏的三个指标就是上面介绍的三个指标：正确率，召回率，F值。
- * 回归问题 —— 对数值型连续随机变量进行预测和建模的监督学习算法。回归往往会通过计算 误差（Error）来确定模型的精确性。
- * 聚类问题 —— 聚类是一种无监督学习任务，该算法基于数据的内部结构寻找观察样本的自然族群（即集群）。聚类问题的标准一般基于距离：簇内距离（Intra-cluster Distance） 和 簇间距离（Inter-cluster Distance） 。簇内距离是越小越好，也就是簇内的元素越相似越好；而簇间距离越大越好，也就是说簇间（不同簇）元素越不相同越好。一般的，衡量聚类问题会给出一个结合簇内距离和簇间距离的公式。
+* 分类问题 —— 说白了就是将一些未知类别的数据分到现在已知的类别中去。比如，根据你的一些信息，判断你是高富帅，还是穷屌丝。评判分类效果好坏的三个指标就是上面介绍的三个指标：正确率，召回率，F值。
+* 回归问题 —— 对数值型连续随机变量进行预测和建模的监督学习算法。回归往往会通过计算 误差（Error）来确定模型的精确性。
+* 聚类问题 —— 聚类是一种无监督学习任务，该算法基于数据的内部结构寻找观察样本的自然族群（即集群）。聚类问题的标准一般基于距离：簇内距离（Intra-cluster Distance） 和 簇间距离（Inter-cluster Distance） 。簇内距离是越小越好，也就是簇内的元素越相似越好；而簇间距离越大越好，也就是说簇间（不同簇）元素越不相同越好。一般的，衡量聚类问题会给出一个结合簇内距离和簇间距离的公式。
 
 下面这个图可以比较直观地展示出来：
 
-![](http://data.apachecn.org/img/AiLearning/ml/1.MLFoundation/ml_add_1.jpg)
+![机器学习](http://data.apachecn.org/img/AiLearning/ml/1.MLFoundation/ml_add_1.jpg)
 
 ### 特征工程的一些小东西
 
- * 特征选择 —— 也叫特征子集选择（FSS，Feature Subset Selection）。是指从已有的 M 个特征（Feature）中选择 N 个特征使得系统的特定指标最优化，是从原始特征中选择出一些最有效特征以降低数据集维度的过程，是提高算法性能的一个重要手段，也是模式识别中关键的数据预处理步骤。
+* 特征选择 —— 也叫特征子集选择（FSS，Feature Subset Selection）。是指从已有的 M 个特征（Feature）中选择 N 个特征使得系统的特定指标最优化，是从原始特征中选择出一些最有效特征以降低数据集维度的过程，是提高算法性能的一个重要手段，也是模式识别中关键的数据预处理步骤。
 
- * 特征提取 —— 特征提取是计算机视觉和图像处理中的一个概念。它指的是使用计算机提取图像信息，决定每个图像的点是否属于一个图像特征。特征提取的结果是把图像上的点分为不同的子集，这些子集往往属于孤立的点，连续的曲线或者连续的区域。
+* 特征提取 —— 特征提取是计算机视觉和图像处理中的一个概念。它指的是使用计算机提取图像信息，决定每个图像的点是否属于一个图像特征。特征提取的结果是把图像上的点分为不同的子集，这些子集往往属于孤立的点，连续的曲线或者连续的区域。
 
 下面给出一个特征工程的图：
 
@@ -232,8 +236,4 @@ F 值 = 70% * 50% * 2 / (70% + 50%) = 58.3%
  * Learning rate —— 学习率，通俗地理解，可以理解为步长，步子大了，很容易错过最佳结果。就是本来目标尽在咫尺，可是因为我迈的步子很大，却一下子走过了。步子小了呢，就是同样的距离，我却要走很多很多步，这样导致训练的耗时费力还不讨好。
  * 一个总结的知识点很棒的链接 ：https://zhuanlan.zhihu.com/p/25197792
 
-* * *
-
-* **作者：[片刻](http://cwiki.apachecn.org/display/~jiangzhonglian) [1988](http://cwiki.apachecn.org/display/~lihuisong)**
-* [GitHub地址](https://github.com/apachecn/AiLearning): <https://github.com/apachecn/AiLearning>
-* **版权声明：欢迎转载学习 => 请标注信息来源于 [ApacheCN](http://www.apachecn.org/)**
+***
