--- a/docs/ml/3.决策树.md
+++ b/docs/ml/3.决策树.md
@@ -1,8 +1,7 @@
 
 # 第3章 决策树
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
 
-![决策树_首页](http://data.apachecn.org/img/AiLearning/ml/3.DecisionTree/DecisionTree_headPage_xy.png "决策树首页")
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
 
 ## 决策树 概述
 
@@ -18,13 +17,29 @@
 
 一个邮件分类系统，大致工作流程如下：
 
-![决策树-流程图](http://data.apachecn.org/img/AiLearning/ml/3.DecisionTree/决策树-流程图.jpg "决策树示例流程图")
+```flow
+st=>start: 邮件分类系统流程
+
+cond1=>condition: 发送邮件域名地址为myEmployer.com
+cond2=>condition: 是否包含“曲棍球”？
+
+op1=>operation: 无聊时需要阅读的邮件
+op2=>operation: 需要及时处理的邮件
+op3=>operation: 无需阅读的垃圾邮件
+
+st->cond1
+
+cond1(yes)->op1
+cond1(no)->cond2
+
+cond2(yes)->op2
+cond2(no)->op3
 
 ```
-首先检测发送邮件域名地址。如果地址为 myEmployer.com, 则将其放在分类 "无聊时需要阅读的邮件"中。
-如果邮件不是来自这个域名，则检测邮件内容里是否包含单词 "曲棍球" , 如果包含则将邮件归类到 "需要及时处理的朋友邮件", 
-如果不包含则将邮件归类到 "无需阅读的垃圾邮件" 。
-```
+
+1. 首先检测发送邮件域名地址。如果地址为 myEmployer.com, 则将其放在分类 "无聊时需要阅读的邮件"中
+1. 如果邮件不是来自这个域名，则检测邮件内容里是否包含单词 "曲棍球" , 如果包含则将邮件归类到 "需要及时处理的朋友邮件"
+1. 如果不包含则将邮件归类到 "无需阅读的垃圾邮件"
 
 决策树的定义：
 
@@ -34,14 +49,24 @@
 
 ## 决策树 原理
 
+### 基本流程
+
+一般滴，一个决策树包含一个根结点、若干个内部结点和若干个叶结点，叶结点对应于决策结果，其他每个结点则对应于一个属性测试，每个结点包含的样本集合根据属性测试的结果被划分到子结点中，根结点包含样本全集，从根结点到每个叶结点的路径对应了一个判定测试序列。
+决策树学习的目的是为了产生一颗泛化能力强，即处理未见示例能力强的决策树，其基本流程遵循简单且直观的`分而治之策略`
+
+```python
+输入：训练集 D = {(x1, y1), (x2, y2),...,(xn, yn)};
+     属性集 A = {a1, a2, ...,ad};
+```
+
 ### 决策树 须知概念
 
 #### 信息熵 & 信息增益
 
-熵（entropy）：
-熵指的是体系的混乱的程度，在不同的学科中也有引申出的更为具体的定义，是各领域十分重要的参量。
+熵（entropy）
+熵指的是体系的混乱的程度，在不同的学科中也有引申出的更为具体的定义，是各领域十分重要的参量
 
-信息论（information theory）中的熵（香农熵）：
+信息论（information theory）中的熵（香农熵）
 是一种信息的度量方式，表示信息的混乱程度，也就是说：信息越有序，信息熵越低。例如：火柴有序放在火柴盒里，熵值很低，相反，熵值很高。
 
 信息增益（information gain）：
@@ -49,43 +74,41 @@
 
 ### 决策树 工作原理
 
-如何构造一个决策树?<br/>
+如何构造一个决策树?
 我们使用 createBranch() 方法，如下所示：
 
-```
+```python
 def createBranch():
 '''
 此处运用了迭代的思想。 感兴趣可以搜索 迭代 recursion， 甚至是 dynamic programing。
 '''
     检测数据集中的所有数据的分类标签是否相同:
-        If so return 类标签
-        Else:
-            寻找划分数据集的最好特征（划分之后信息熵最小，也就是信息增益最大的特征）
-            划分数据集
-            创建分支节点
+        if so:
+            return 类标签
+        else:
+            1. 寻找划分数据集的最好特征（划分之后信息熵最小，也就是信息增益最大的特征）
+            2. 划分数据集
+            3. 创建分支节点
                 for 每个划分的子集
-                    调用函数 createBranch （创建分支的函数）并增加返回结果到分支节点中
+                    1.调用函数 createBranch （创建分支的函数）并增加返回结果到分支节点中
             return 分支节点
 ```
 
 ### 决策树 开发流程
 
-```
-收集数据：可以使用任何方法。
-准备数据：树构造算法 (这里使用的是ID3算法，只适用于标称型数据，这就是为什么数值型数据必须离散化。 还有其他的树构造算法，比如CART)
-分析数据：可以使用任何方法，构造树完成之后，我们应该检查图形是否符合预期。
-训练算法：构造树的数据结构。
-测试算法：使用训练好的树计算错误率。
-使用算法：此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义。
-```
+1. 收集数据：可以使用任何方法。
+1. 准备数据：树构造算法 (这里使用的是ID3算法，只适用于标称型数据，这就是为什么数值型数据必须离散化。 还有其他的树构造算法，比如CART)
+1. 分析数据：可以使用任何方法，构造树完成之后，我们应该检查图形是否符合预期。
+1. 训练算法：构造树的数据结构。
+1. 测试算法：使用训练好的树计算错误率。
+1. 使用算法：此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义。
 
 ### 决策树 算法特点
 
-```
-优点：计算复杂度不高，输出结果易于理解，数据有缺失也能跑，可以处理不相关特征。
-缺点：容易过拟合。
-适用数据类型：数值型和标称型。
-```
+- 优点：计算复杂度不高，输出结果易于理解，数据有缺失也能跑，可以处理不相关特征。
+- 缺点：容易过拟合。
+
+>适用数据类型：数值型和标称型。
 
 ## 决策树 项目案例
 
@@ -96,27 +119,30 @@ def createBranch():
 根据以下 2 个特征，将动物分成两类：鱼类和非鱼类。
 
 特征：
+
 1. 不浮出水面是否可以生存
 2. 是否有脚蹼
 
 #### 开发流程
 
-[完整代码地址](/src/py2.x/ml/3.DecisionTree/DecisionTree.py): <https://github.com/apachecn/AiLearning/blob/master/src/py2.x/ml/3.DecisionTree/DecisionTree.py>
-
-```
-收集数据：可以使用任何方法
-准备数据：树构造算法（这里使用的是ID3算法，因此数值型数据必须离散化。）
-分析数据：可以使用任何方法，构造树完成之后，我们可以将树画出来。
-训练算法：构造树结构
-测试算法：使用习得的决策树执行分类
-使用算法：此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义
-```
+1. 收集数据：可以使用任何方法
+1. 准备数据：树构造算法（这里使用的是`ID3`算法，因此数值型数据必须离散化。）
+1. 分析数据：可以使用任何方法，构造树完成之后，我们可以将树画出来。
+1. 训练算法：构造树结构
+1. 测试算法：使用习得的决策树执行分类
+1. 使用算法：此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义
 
 > 收集数据：可以使用任何方法
 
-![海洋生物数据](http://data.apachecn.org/img/AiLearning/ml/3.DecisionTree/DT_海洋生物数据.png)
+||Can survive without coming to surface?|Has flippers?|Fish?|
+|--|--|--|--|
+|1|Yes|Yes|Yes|
+|2|Yes|Yes|Yes|
+|3|Yes|No|No|
+|4|No|Yes|No|
+|5|No|Yes|No|
 
-我们利用 createDataSet() 函数输入数据
+我们利用 `createDataSet()` 函数输入数据
 
 ```python
 def createDataSet():
@@ -128,6 +154,7 @@ def createDataSet():
     labels = ['no surfacing', 'flippers']
     return dataSet, labels
 ```
+
 > 准备数据：树构造算法
 
 此处，由于我们输入的数据本身就是离散化数据，所以这一步就省略了。
@@ -337,7 +364,6 @@ def classify(inputTree, featLabels, testVec):
 
 > 使用算法：此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义。
 
-
 ### 项目案例2: 使用决策树预测隐形眼镜类型
 
 [完整代码地址](/src/py2.x/ml/3.DecisionTree/DecisionTree.py): <https://github.com/apachecn/AiLearning/blob/master/src/py2.x/ml/3.DecisionTree/DecisionTree.py>
@@ -408,10 +434,3 @@ def grabTree(filename):
     fr = open(filename, 'rb')
     return pickle.load(fr)
 ```
-
-
-* * *
-
-* **作者：[片刻](https://github.com/jiangzhonglian) [小瑶](http://cwiki.apachecn.org/display/~chenyao)**
-* [GitHub地址](https://github.com/apachecn/AiLearning): <https://github.com/apachecn/AiLearning>
-* **版权声明：欢迎转载学习 => 请标注信息来源于 [ApacheCN](http://www.apachecn.org/)**        
