--- a/docs/ml/3.决策树.md
+++ b/docs/ml/3.决策树.md
@@ -57,6 +57,25 @@ cond2(no)->op3
 ```python
 输入：训练集 D = {(x1, y1), (x2, y2),...,(xn, yn)};
      属性集 A = {a1, a2, ...,ad};
+
+过程：函数 TreeGenerate(D, A)
+1. 生成结点 node
+2. if D 中样本全属于同一类别 C then
+3.     将 node 标记为C 类叶结点; return 
+4. end if
+5. if A = 空集 OR D 中样本在A上取值相同 then
+6.     将 node 标记为叶结点，其类别标记为D中样本数最多的类; return 
+7. end if
+8. 从A中选择最有划分属性a*
+9. for a* 的每一个值 do
+10. 为 node 生成一个分支，另DV表示D中在a*上取值的样本子集
+11. if Dv 为空 then
+12.     将分支结点标记为叶结点，其类别标记为D中样本最多的类; return 
+13. else
+14. 以 TreeGenerate 为分支结点
+15. end if
+16. end for
+输出：以node为根结点的一颗决策树
 ```
 
 ### 决策树 须知概念
