--- a/docs/ml/4.朴素贝叶斯.md
+++ b/docs/ml/4.朴素贝叶斯.md
@@ -1,12 +1,12 @@
-   
 # 第4章 基于概率论的分类方法：朴素贝叶斯
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
 
-![朴素贝叶斯_首页](http://data.apachecn.org/img/AiLearning/ml/4.NaiveBayesian/NavieBayesian_headPage_xy.png "朴素贝叶斯首页")
-
-## 朴素贝叶斯 概述 
+## 朴素贝叶斯 概述
 
 `贝叶斯分类是一类分类算法的总称，这类算法均以贝叶斯定理为基础，故统称为贝叶斯分类。本章首先介绍贝叶斯分类算法的基础——贝叶斯定理。最后，我们通过实例来讨论贝叶斯分类的中最简单的一种: 朴素贝叶斯分类。`
+
+- 优点 在数据较少的情况下仍然有效，可以处理多类别的问题
+- 缺点 对于输入数据的准备方式较为敏感
+适用数据 标称型数据
 
 ## 贝叶斯理论 & 条件概率
 
@@ -17,6 +17,7 @@
 ![朴素贝叶斯示例数据分布](http://data.apachecn.org/img/AiLearning/ml/4.NaiveBayesian/朴素贝叶斯示例数据分布.png "参数已知的概率分布")
 
 我们现在用 p1(x,y) 表示数据点 (x,y) 属于类别 1（图中用圆点表示的类别）的概率，用 p2(x,y) 表示数据点 (x,y) 属于类别 2（图中三角形表示的类别）的概率，那么对于一个新数据点 (x,y)，可以用下面的规则来判断它的类别：
+
 * 如果 p1(x,y) > p2(x,y) ，那么类别为1
 * 如果 p2(x,y) > p1(x,y) ，那么类别为2
 
@@ -114,8 +115,6 @@ P(white|bucketB) = P(white and bucketB) / P(bucketB)
 ## 朴素贝叶斯 项目案例
 
 ### 项目案例1: 屏蔽社区留言板的侮辱性言论
-
-[完整代码地址](/src/py2.x/ml/4.NaiveBayes/bayes.py): <https://github.com/apachecn/AiLearning/blob/master/src/py2.x/ml/4.NaiveBayes/bayes.py>
 
 #### 项目概述
 
